--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -100,6 +100,10 @@ footer {
   max-width: 550px;
 }
 
+.width800px{
+  width: 800px;
+}
+
 /* END CSS WIDTH */
 
 /* CSS INPUT */
@@ -183,6 +187,16 @@ footer {
   margin: 0;
 }
 
+.custom-card7 {
+  background-color: var(--dark-blue);
+  color: var(--white);
+  border: none;
+  width: 300px !important;
+  height: 480px !important;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 .card {
   max-width: 500px;
   overflow-y: auto;
@@ -262,6 +276,11 @@ footer {
   margin-top: 15px;
 }
 
+.text-center2 {
+  text-align: center;
+}
+
+
 .container-img-background {
   background-image: url('../images/login-pic.png');
   background-size: cover;
@@ -287,6 +306,10 @@ footer {
   margin-bottom: 10%;
 }
 
+.mt-60{
+  margin-top: 60px;
+}
+
 .nav-link.active {
   text-decoration: underline !important;
   border-radius: 20px;
@@ -294,6 +317,10 @@ footer {
 
 .margem-esquerda {
   margin-left: -340;
+}
+
+.margin-top{
+  margin-top: -50;
 }
 
 .fonte-arial {
@@ -314,6 +341,18 @@ footer {
 
 .cinza {
   color: var(--gray);
+}
+
+.vermelho {
+  color: var(--red);
+}
+
+.branco {
+  color: var(--white)
+}
+
+.verde{
+  color: var(--light-green)
 }
 
 .sobreMenu {
@@ -362,7 +401,7 @@ h4 {
 
 /* CSS CUSTOM PADDING */
 .custom-padding-left {
-  padding-left: 210px;
+  padding-left: 265px;
 }
 
 .custom-padding-left2 {
@@ -385,18 +424,26 @@ h4 {
   padding-left: 143px;
 }
 
+.custom-padding-left7 {
+  padding-left: 100px;
+}
+
+.custom-padding-top{
+  padding-top: 45px;
+}
+
+
 /* END CSS CUSTOM PADDING */
 
 /* CSS GRAFICO */
-#chart,
-.chart-box {
-  padding-top: 20px;
-  padding-left: 10px;
-  background: var(--white);
+#chart {
+  padding-top: 5px;
+  padding-left: 5px;
+  background: var(--white) !important;
   border: 1px solid #ddd;
   box-shadow: 0 22px 35px -16px rgba(0, 0, 0, 0.1);
+  width: 700px;
 }
-
 select.flat-select {
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -416,12 +463,13 @@ select.flat-select {
   text-overflow: "";
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   transition: all 0.3s ease 0s;
-  width: auto;
+  width: 250px !important;
   -webkit-transition: 0.3s ease all;
   -moz-transition: 0.3s ease all;
   -ms-transition: 0.3s ease all;
   -o-transition: 0.3s ease all;
   transition: 0.3s ease all;
+  max-width: 500px;
 }
 
 select.flat-select:focus,
