--- a/stocktrade/src/main/resources/templates/fragments/headerLogadoFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/headerLogadoFragment.html
@@ -11,7 +11,7 @@
         />
       </a>
   
-      <ul class="nav col-12 col-md-auto mb-2 mb-md-0 ml-0">
+      <ul class="nav col-12 col-md-auto mb-2 mb-md-0 me-auto">
   
         <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/indexLogado', 'Home', ${currentPage})}"></li>
 
