refactor: :recycle: Organização imagens
Organização das imagens e icones em pastas separadas para maior organização do projeto

#29

--- a/stocktrade/src/main/resources/templates/sobre.html
+++ b/stocktrade/src/main/resources/templates/sobre.html
@@ -37,7 +37,7 @@
                     class="col-md-4 d-flex justify-content-center align-items-center"
                   >
                     <img
-                      src="images/seguranca-icon.png"
+                      src="icons/seguranca-icon.png"
                       class="img-fluid rounded-start"
                       alt="seguranca"
                     />
@@ -62,7 +62,7 @@
                     class="col-md-4 d-flex justify-content-center align-items-center"
                   >
                     <img
-                      src="images/conexao-icon.png"
+                      src="icons/conexao-icon.png"
                       class="img-fluid rounded-start"
                       alt="conexao"
                     />
@@ -90,7 +90,7 @@
                     class="col-md-4 d-flex justify-content-center align-items-center"
                   >
                     <img
-                      src="images/transparencia-icon.png"
+                      src="icons/transparencia-icon.png"
                       class="img-fluid rounded-start"
                       alt="transparencia"
                     />
@@ -116,7 +116,7 @@
                     class="col-md-4 d-flex justify-content-center align-items-center"
                   >
                     <img
-                      src="images/edu-financeira-icon.png"
+                      src="icons/edu-financeira-icon.png"
                       class="img-fluid rounded-start"
                       alt="edu-financeira"
                     />
