--- a/stocktrade/src/main/resources/templates/invista.html
+++ b/stocktrade/src/main/resources/templates/invista.html
@@ -33,7 +33,7 @@
               >
                 <div class="">
                   <img
-                    src="images/carteira-icon.png"
+                    src="icons/carteira-icon.png"
                     class=""
                     alt="icone carteira"
                   />
@@ -63,7 +63,7 @@
               >
                 <div class="">
                   <img
-                    src="images/seguranca2-icon.png"
+                    src="icons/seguranca2-icon.png"
                     class="img-fluid max-img-width"
                     alt="icone seguranca"
                   />
@@ -93,7 +93,7 @@
               >
                 <div class="">
                   <img
-                    src="images/investimentos-icon.png"
+                    src="icons/investimentos-icon.png"
                     class=""
                     alt="icone investimentos"
                   />
@@ -123,7 +123,7 @@
               >
                 <div class="">
                   <img
-                    src="images/compravenda-icon.png"
+                    src="icons/compravenda-icon.png"
                     class=""
                     alt="icone compra e venda"
                   />
@@ -152,7 +152,7 @@
                 class="card-body d-flex align-items-center justify-content-center"
               >
                 <img
-                  src="images/dividendos-icon.png"
+                  src="icons/dividendos-icon.png"
                   class=""
                   alt="icone dividendos"
                 />
