style: :art: Tela indexLogado e Carteira
Finalização tela carteira e indexLogado

--- a/stocktrade/src/main/resources/templates/carteira.html
+++ b/stocktrade/src/main/resources/templates/carteira.html
@@ -11,13 +11,12 @@
             <div class="row ms-5 mt-5">
               <!-- Coluna dos textos à esquerda -->
               <div class="col-md-6">
-                <h1 class="h1 fw-bold">
+                <h1 class="h1">
                   Carteira
                 </h1>
                 <p class="fs-8 mb-3 max-width-800px cinza">
                   Atualizado em 19/09/2023
                 </p>
-          
                 <h1 class="h6 fw-bold">
                   Saldo Atual <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-eye" viewBox="0 0 16 16">
@@ -72,6 +71,99 @@
               </div>
             </div>
           </div>
+
+
+        <div class="container-fluid mt-2 mb-2">
+            <div class="row ms-5 mt-5">
+              <!-- Coluna dos textos à esquerda -->
+              <div class="col-md-6">
+                <h1 class="h1">
+                  Seus Ativos
+                </h1>
+            </div>
+        </div>
+
+        <table class="table table-custom margin-table">
+            <thead>
+              <tr>
+                <th scope="col">NOME</th>
+                <th scope="col">RECOMENDAÇÃO</th>
+                <th scope="col">PREÇO ATUAL</th>
+                <th scope="col">PREÇO ALVO</th>
+                <th scope="col">POTENCIAL</th>
+                <th scope="col">QUANTIDADE</th>
+                <th scope="col">AÇÕES</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row"><img src="images/petrobras-icon.png" class="img-fluid rounded-start"
+                    alt="edu-financeira" /> PETR4</th>
+                <td>COMPRA</td>
+                <td>R$33,65</td>
+                <td>R$36,70</td>
+                <td>9,29%</td>
+                <td>526</td>
+                <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                  </svg></td>
+              </tr>
+              <tr>
+                <th scope="row"><img src="images/vale1-icon.png" class="img-fluid rounded-start"
+                    alt="edu-financeira" /> VAL3</th>
+                    <td>NEUTRO</td>
+                    <td>R$68,73</td>
+                    <td>R$73,00</td>
+                    <td>7,21%</td>
+                    <td>396</td>
+                    <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                      </svg></td>
+                  </tr>
+              <tr>
+                <th scope="row"><img src="images/itau-icon.png" class="img-fluid rounded-start"
+                    alt="edu-financeira" /> ITUB4</th>
+                    <td>COMPRA</td>
+                    <td>R$R$26,84</td>
+                    <td>R$34,00</td>
+                    <td>27,20%</td>
+                    <td>0</td>
+                    <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                      </svg></td>
+                  </tr>
+              <tr>
+                <th scope="row"><img src="images/BDB-icon.png" class="img-fluid rounded-start"
+                    alt="edu-financeira" /> BBAS3</th>
+                    <td>COMPRA</td>
+                    <td>R$47,28</td>
+                    <td>R$61,00</td>
+                    <td>30,01%</td>
+                    <td>0</td>
+                    <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                      </svg></td>
+                  </tr>
+              <tr>
+                <th scope="row"><img src="images/localiza1-icon.png" class="img-fluid rounded-start"
+                    alt="edu-financeira" /> RENT3</th>
+                    <td>COMPRA</td>
+                    <td>R$61,93</td>
+                    <td>R$73,00</td>
+                    <td>20,03%</td>
+                    <td>0</td>
+                    <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                      </svg></td>
+                  </tr>
+            </tbody>
+          </table>
+
           
     </main>
 
