--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -355,6 +355,10 @@ footer {
   color: var(--light-green)
 }
 
+.azul-claro{
+  color: var(--light-blue)
+}
+
 .sobreMenu {
   background-color: var(--dark-blue);
   border-radius: 20px;
@@ -432,6 +436,42 @@ h4 {
   padding-top: 45px;
 }
 
+/* CSS TABLE CARTEIRA */
+.table-custom {
+  padding: 40px; /* Espaçamento interno das células (ajuste conforme necessário) */
+  text-align: center; /* Alinhamento de texto centralizado */
+  color: white;
+  height: 624px;
+  width: 1124px;
+  font-size: 17px;
+}
+
+.margin-table{
+  margin-left: 400px;
+}
+
+/* CSS NAVBAR */
+.navbar {
+  background-color: #010725; 
+}
+
+.btn-custom {
+  color: white;
+  border: 1px solid var(--white);
+}
+
+
+.input-custom {
+  background-color: white; 
+  color: white; 
+}
+
+/* Estilo para o hover do botão Pesquisar */
+.btn-custom:hover {
+  background-color: var(--dark-blue); 
+  color: white; 
+  border-style : var(--light-blue);
+}
 
 /* END CSS CUSTOM PADDING */
 
