feat: :sparkles: Adicionado tela de perfil e mensagem de erro no login e cadastro
Trocar do alert por uma mensagem junto aos campos de login e cadastro quando houver um erro no que for digitado. Adição da página de perfil para o usuário trocar o email ou a senha.

--- a/stocktrade/src/main/resources/templates/cadastro.html
+++ b/stocktrade/src/main/resources/templates/cadastro.html
@@ -84,6 +84,7 @@
                       placeholder="Digite a senha utilizada para autenticação das atividades no sistema"
                       oninput="limitSenhaAutenticacao(this)"
                     />
+                    <p id="senha-error" class="text-danger mt-2"> TROCAR MENSAGEM DE ERRO</p>
                   </div>
                   <div class="text-center">
                     <button
