feat: :lock: Implementação do login utilizando aspectos
Foi implementado o login do sistema utilizando o AspectJ, do mesmo modo, o aspecto de autenticação verifica as páginas que é necessário o login e impede de acessá-las sem estar logado. Ainda nas páginas em que o acesso logado não é necessário, há uma restrição e o usuário retorna para a indexLogado

#30

--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -124,7 +124,7 @@ footer {
   background-color: rgb(95, 95, 95);
   border-color: var(--gray);
   box-shadow: none;
-  color: var(--dark-blue) !important;
+  color: var(--white) !important;
 }
 
 /* END CSS INPUT */
