--- a/stocktrade/src/main/resources/templates/fragments/headerFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/headerFragment.html
@@ -24,8 +24,8 @@
     </ul>
 
     <div class="col-md-3 text-end">
-      <a href="login" class="btn btn-outline-primary botao1 me-4">Login</a>
-      <a href="cadastro" class="btn btn-outline-primary botao1 me-4"
+      <a href="/login" class="btn btn-outline-primary botao1 me-4">Login</a>
+      <a href="/cadastro" class="btn btn-outline-primary botao1 me-4"
         >Cadastre-se</a
       >
     </div>
