feat: :sparkles: Mensagem de erro personalizada
Mensagem de erro virá do Java na hora de jogar, ainda há um bug que ele está retornando um HTTP 500, que não deve ocorrer

--- a/stocktrade/src/main/resources/templates/login.html
+++ b/stocktrade/src/main/resources/templates/login.html
@@ -114,13 +114,15 @@
           body: JSON.stringify({
             email: email,
             senha: password,
-          }),
+          })
         })
         .then(response => {
 				if (response.ok) {
 					window.location.href='/indexLogado';
 				} else {
-					alert("Usuário não encontrado. Tente novamente.");
+          response.json().then(data => {
+            senhaError.textContent = data.message;
+          });
 				}
 			  })
         .catch(error => {
