fix: :bug: Correção footer
Correção da posição e das margens do footer e margem da página inicial

--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -469,6 +469,9 @@ h4 {
   padding-top: 45px;
 }
 
+.custom-padding-bottom{
+  padding-bottom: 6.5%;
+}
 /* CSS TABLE CARTEIRA */
 .table-custom {
   padding: 40px; /* Espaçamento interno das células (ajuste conforme necessário) */
