--- a/stocktrade/src/main/resources/templates/fragments/footerFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/footerFragment.html
@@ -1,4 +1,4 @@
-<footer class="footer py-3 container-fluid mt-5" th:fragment="footer">
+<footer class="footer py-3 container-fluid" th:fragment="footer">
   <div
     class="mx-5 d-flex justify-content-between align-items-center border-bottom border-white pb-4 pt-2 pe-5"
   >
