--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -489,8 +489,21 @@ h4 {
   font-size: 17px;
 }
 
+#saldo {
+  opacity: 1; /* Defina a opacidade inicial para 1 (visível) */
+  transition: opacity 0.2s ease-in-out; /* Adicione uma transição suave para a propriedade de opacidade */
+}
+
+#toggleEye {
+  cursor: pointer; /* Adicione um cursor de apontador ao ícone do olho */
+}
+
 .custom-margin-left{
   margin-left: 15%;
+}
+
+.custom-margin-left2{
+  margin-left: 43%;
 }
 
 .margin-table{
