feat: :sparkles: Mostrar todas as ações disponíveis no site

--- a/stocktrade/src/main/resources/templates/fragments/headerLogadoFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/headerLogadoFragment.html
@@ -9,7 +9,7 @@
 
       <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/indexLogado', 'Home', ${currentPage})}"></li>
 
-      <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/invista', 'Invista', ${currentPage})}"></li>
+      <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/invistaLogado', 'Invista', ${currentPage})}"></li>
 
       <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/sobre', 'Sobre', ${currentPage})}"></li>
 
