--- a/stocktrade/src/main/resources/templates/invistaLogado.html
+++ b/stocktrade/src/main/resources/templates/invistaLogado.html
@@ -8,7 +8,7 @@
 
     <main>
       <div
-        th:replace="~{fragments/headerLogadoFragment :: header('indexLogado')}"
+        th:replace="~{fragments/headerLogadoFragment :: header('Invista')}"
       ></div>
 
       <div class="col-12">
@@ -28,16 +28,12 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <th scope="row"><img src="images/petrobras-icon.png" class="img-fluid rounded-start"
-                    alt="edu-financeira" /> PETR4</th>
-                <td>COMPRA</td>
-                <td>R$33,65</td>
-                <td>R$36,70</td>
-    
-                <td><svg width="19" height="19" viewBox="0 0 1024 1024" class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M903.232 256l56.768 50.432L512 768 64 306.432 120.768 256 512 659.072z" fill="#fff" />
-                </svg></td>
+              <tr th:each="acao : ${acoes}">
+                <td>???</td>
+                <td th:text="${acao.sigla}"></td>
+                <td th:text="'R$ ' + ${acao.valor}"></td>
+                <td>???</td>
+                <td>???</td>
               </tr>
             </tbody>
           </table>
