--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -514,10 +514,15 @@ h4 {
 
 /* CSS GRAFICO */
 #chart {
+  color: #000;
+  font-family: 'DM Sans';
+  font-weight: bold;
   padding-top: 5px;
   padding-left: 5px;
   background: var(--white) !important;
   border: 1px solid #ddd;
+  border-radius: 25px;
+  overflow: hidden;
   box-shadow: 0 22px 35px -16px rgba(0, 0, 0, 0.1);
   width: 700px;
 }
