--- a/stocktrade/src/main/resources/templates/fragments/headerLogadoFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/headerLogadoFragment.html
@@ -9,16 +9,16 @@
 
       <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/indexLogado', 'Home', ${currentPage})}"></li>
 
-      <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/invista', 'Invista', ${currentPage})}"></li>
+      <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/carteira', 'Carteira', ${currentPage})}"></li>
 
-      <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/sobre', 'Sobre', ${currentPage})}"></li>
+      <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/invistaLogado', 'Invista', ${currentPage})}"></li>
 
-      <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/contato', 'Contato', ${currentPage})}"></li>
+      <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/contatoLogado', 'Contato', ${currentPage})}"></li>
 
     </ul>
 
 
-    <nav class="navbar navbar-light bg-custom">
+    <!-- <nav class="navbar navbar-light bg-custom">
       <div class="container-fluid">
         <form class="d-flex">
           <input class="form-control me-2 input-custom" type="search" placeholder="Busque no site..."
@@ -26,7 +26,7 @@
           <button class="btn btn-outline-success btn-custom" type="submit">Pesquisar</button>
         </form>
       </div>
-    </nav>
+    </nav> -->
 
 
     <div class="col-md-3 text-end">
